Updated SSL library version and env vars

--- a/api_module.yaml
+++ b/api_module.yaml
@@ -3,6 +3,9 @@ runtime: python27
 api_version: 1
 threadsafe: true
 
+env_variables:
+  PYTHONHTTPSVERIFY: 1
+
 handlers:
 - url: /_ah/api/.*
   script: api-service.application
